// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ids getUUID returns correctly with a prefix 1`] = `"ah-6c756c756c756c756c756c756c756c75"`;

exports[`ids getUUID returns correctly without arguments 1`] = `"6c756c756c756c756c756c756c756c75"`;

exports[`ids useUUID renders correctly with a prefix 1`] = `
<DocumentFragment>
  ah-6c756c756c756c756c756c756c756c75
</DocumentFragment>
`;

exports[`ids useUUID renders correctly without arguments 1`] = `
<DocumentFragment>
  6c756c756c756c756c756c756c756c75
</DocumentFragment>
`;
